fix: content spacing doesn't span full width

--- a/user.css
+++ b/user.css
@@ -42,6 +42,10 @@
   display: none;
 }
 
+.contentSpacing { 
+  max-width: 100vw !important; 
+}
+
 .main-home-homeHeader,
 .main-actionBarBackground-background {
   background-image: none;
